# churnlens

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
docs/acceptance/: exit_report.md
docs/architecture/: solution_architecture.md
docs/business_understanding/: business_case.md  glossary.md  project_charter.md  stakeholders.md  success_criteria.md
docs/data/: data_definition.md  data_dictionary.md  data_quality_report.md  data_summary_report.md
docs/deployment/: deploymentdoc.md  infrastructure.md
docs/governance/: ethics_and_fairness.md  model_card.md  privacy_and_compliance.md
docs/modeling/: baseline_models.md  feature_selection.md  final_model_report.md
docs/project_management/: phase_log.md
models/: dummy_most_frequent.metadata.json  dummy_prior.metadata.json  dummy_stratified.metadata.json  hist_gb.metadata.json  lightgbm.metadata.json  logreg_balanced.metadata.json  logreg_l1.metadata.json  random_forest.metadata.json
notebooks/: 01_data_acquisition_eda.ipynb  02_eda_and_preprocessing.ipynb  03_modeling_and_evaluation.ipynb
scripts/data_acquisition/: main.py
scripts/deployment/: main.py
scripts/eda/: main.py
scripts/evaluation/: fairness_audit.py  main.py
scripts/preprocessing/: main.py
scripts/training/: main.py
src/churnlens/: __init__.py  cli.py  config.py  logger.py
src/churnlens/data/: __init__.py  loader.py  schema.py  validators.py
src/churnlens/eda/: __init__.py  plots.py  report.py  summary.py
src/churnlens/features/: __init__.py  engineering.py  pipeline.py  preprocessing.py  selection.py  splits.py
src/churnlens/models/: __init__.py  baseline.py  evaluation.py  fairness.py  registry.py  train.py
src/churnlens/serving/: __init__.py  api.py  schemas.py  service.py
src/churnlens/utils/: __init__.py  hashing.py
tests/: conftest.py  test_cli.py  test_config.py  test_eda.py  test_features_engineering.py  test_features_pipeline.py  test_features_preprocessing.py  test_features_selection.py  test_hashing.py  test_loader.py  test_models_baseline.py  test_models_evaluation.py  test_models_fairness.py  test_models_registry.py  test_models_train.py  test_schema.py  test_serving_api.py  test_serving_service.py  test_validators.py
