[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------------
# Project metadata
# ----------------------------------------------------------------------
[project]
name = "churnlens"
version = "0.3.0"
description = "Predicción temprana de churn en servicios por suscripción — Proyecto Aplicado del Módulo 6 (Diplomado MLDS, Universidad Nacional de Colombia)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jhon Gallego", email = "jhgallegoa21@gmail.com" }
]
keywords = [
    "machine-learning",
    "churn-prediction",
    "saas",
    "customer-retention",
    "tdsp",
    "mlds-unal"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandera>=0.18",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "ydata-profiling>=4.7",
    "ipywidgets>=8.1",
]
dev = [
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "nbqa>=1.8",
    "nbstripout>=0.7",
    "httpx>=0.27",
]
all = ["churnlens[notebooks,dev]"]

[project.scripts]
churnlens = "churnlens.cli:app"

[project.urls]
Homepage = "https://github.com/jhonevergallegoate/churnlens"
Repository = "https://github.com/jhonevergallegoate/churnlens"
Issues = "https://github.com/jhonevergallegoate/churnlens/issues"

# ----------------------------------------------------------------------
# Setuptools
# ----------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
churnlens = ["py.typed"]

# ----------------------------------------------------------------------
# Ruff — linter + formatter
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
extend-exclude = ["notebooks/.ipynb_checkpoints", "data", "reports"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "N",             # pep8-naming
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "D",             # pydocstyle
    "PL",            # pylint
    "PT",            # pytest-style
]
ignore = [
    "D100", "D104",  # missing module/package docstring
    "PLR0913",       # too many arguments
    "PLR2004",       # magic numbers (común en tests)
    "RUF001",        # ambiguous unicode chars (×, ✓) usados intencionalmente en strings de UX
    "RUF002",        # ambiguous chars en docstrings (acentos, "—", etc.)
    "RUF003",        # ambiguous chars en comentarios
    "PLC0415",       # import dentro de función (útil para imports lazy)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004", "S101", "E501", "SLF001"]
"tests/conftest.py" = ["D", "E501"]
"scripts/**" = ["D", "E402"]
# El contrato de la API replica el casing original del dataset (SeniorCitizen,
# MonthlyCharges, customerID, …) para ser espejo exacto del data dictionary.
"src/churnlens/serving/schemas.py" = ["N815"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------
# Black (fallback formatter, complementa a Ruff)
# ----------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ----------------------------------------------------------------------
# Mypy — type checking
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = false
show_error_codes = true
pretty = true
ignore_missing_imports = true
files = ["src/churnlens"]

# ----------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=churnlens",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marca tests lentos (deselecciónalos con '-m \"not slow\"')",
    "integration: tests de integración que tocan red o disco",
]

[tool.coverage.run]
source = ["churnlens"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
